<?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edna.ceniza.com.easycalc.MainActivity">

  <EditText
      android:id="@+id/fnum"
      android:hint="@string/fnum"
      android:layout_width="322dp"
      android:layout_height="42dp"
      android:ems="10"
      android:inputType="number"
      android:layout_marginStart="8dp"
      android:layout_marginEnd="8dp"
      app:layout_constraintTop_toTopOf="parent"
      android:layout_marginTop="29dp"
      android:layout_marginRight="8dp"
      app:layout_constraintRight_toRightOf="parent"
      android:layout_marginLeft="8dp"
      app:layout_constraintLeft_toLeftOf="parent" />

 <EditText
     android:id="@+id/snum"
     android:hint="@string/snum"
     android:layout_width="321dp"
     android:layout_height="44dp"
     android:ems="10"
     android:inputType="number"
     android:layout_marginStart="8dp"
     android:layout_marginEnd="8dp"
     android:layout_marginTop="8dp"
     app:layout_constraintTop_toBottomOf="@+id/fnum"
     android:layout_marginRight="8dp"
     app:layout_constraintRight_toRightOf="parent"
     android:layout_marginLeft="8dp"
     app:layout_constraintLeft_toLeftOf="parent" />

 <TextView
     android:id="@+id/result"
     android:layout_width="296dp"
     android:layout_height="46dp"
     android:background="#C0C0C0"
     android:textAlignment="center"
     android:text="@string/txt"
     android:textSize="24sp"
     android:gravity="center"
     android:layout_marginTop="29dp"
     app:layout_constraintTop_toBottomOf="@+id/snum"
     android:layout_marginRight="8dp"
     app:layout_constraintRight_toRightOf="parent"
     android:layout_marginLeft="8dp"
     app:layout_constraintLeft_toLeftOf="parent" />

 <Button
     android:id="@+id/minus"
     android:layout_width="95dp"
     android:layout_height="90dp"
     android:text="@string/btnminus"
     android:textSize="24sp"
     android:layout_marginRight="8dp"
     app:layout_constraintRight_toRightOf="parent"
     android:layout_marginLeft="8dp"
     app:layout_constraintLeft_toLeftOf="parent"
     android:layout_marginTop="24dp"
     app:layout_constraintTop_toBottomOf="@+id/result"
     tools:layout_editor_absoluteY="221dp" />

 <Button
     android:id="@+id/add"
     android:layout_width="95dp"
     android:layout_height="90dp"
     android:text="@string/btnadd"
     android:textSize="24sp"
     app:layout_constraintRight_toLeftOf="@+id/minus"
     android:layout_marginRight="5dp"
     android:layout_marginTop="24dp"
     app:layout_constraintTop_toBottomOf="@+id/result" />

 <Button
     android:id="@+id/clear"
     android:layout_width="95dp"
     android:layout_height="90dp"
     android:text="@string/btnclear"
     android:textSize="24sp"
     app:layout_constraintLeft_toRightOf="@+id/minus"
     android:layout_marginLeft="6dp"
     android:layout_marginTop="24dp"
     app:layout_constraintTop_toBottomOf="@+id/result" />

 <Button
     android:id="@+id/times"
     android:layout_width="95dp"
     android:layout_height="90dp"
     android:text="@string/btntimes"
     android:textSize="24sp"
     app:layout_constraintRight_toLeftOf="@+id/divide"
     android:layout_marginRight="6dp"
     android:layout_marginTop="0dp"
     app:layout_constraintTop_toBottomOf="@+id/add" />

 <Button
     android:id="@+id/divide"
     android:layout_width="95dp"
     android:layout_height="90dp"
     android:text="@string/btndivide"
     android:textSize="24sp"
     android:layout_marginLeft="8dp"
     app:layout_constraintLeft_toLeftOf="parent"
     android:layout_marginRight="8dp"
     app:layout_constraintRight_toRightOf="parent"
     android:layout_marginTop="0dp"
     app:layout_constraintTop_toBottomOf="@+id/minus"
     app:layout_constraintHorizontal_bias="0.501" />

 <Button
     android:id="@+id/exit"
     android:layout_width="95dp"
     android:layout_height="90dp"
     android:text="@string/btnexit"
     android:textSize="24sp"
     app:layout_constraintLeft_toRightOf="@+id/divide"
     android:layout_marginLeft="5dp"
     android:layout_marginTop="0dp"
     app:layout_constraintTop_toBottomOf="@+id/clear" />

</android.support.constraint.ConstraintLayout>
